# fluxgit

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALL.md  LICENSE.md  LINUX.md  Makefile  README.md  SECURITY.md  aoc.md  check_results.txt  check_results_v2.txt  check_results_v3.txt  claude.md  eslint.config.js  frontend.md  ignore-vercel.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tauri-build4.txt  turbo.json
.github/: copilot-instructions.md  pr-labeler.yml
.github/ISSUE_TEMPLATE/: 1_bug.yml  2_documentation.yml  config.yml
.github/workflows/: build.yml  osv-scanner.yml  pr-labeler.yml  publish.yaml  push-e2e-img.yml  push.yaml  test-e2e-blackbox.yml  test-e2e-playwright.yml  test-web.yml  zizmor.yml
.kiro/specs/multi-ai-provider-support/: .config.kiro  design.md  requirements.md  tasks.md
apps/desktop/: README.md  package.json  svelte.config.js  vite.config.ts
apps/lite/: README.md  package.json
apps/lite/ui/: index.html  vite.config.ts  vitest.config.ts
apps/web/: package.json  vite.config.ts
apps/web/src/: app.html
apps/web/tests/: init.spec.ts  install-script.spec.ts
crates/: package.json
crates/but/: Cargo.toml  agents.md  build.rs
crates/but-action/: Cargo.toml
crates/but-action/src/: action.rs  auto_commit.rs  lib.rs  rename_branch.rs  reword.rs  simple.rs  workflow.rs
crates/but-api/: Cargo.toml
crates/but-api/src/: commit.rs  github.rs  json.rs  lib.rs  platform.rs
crates/but-bot/: Cargo.toml
crates/but-bot/src/: butbot.rs  lib.rs  state.rs
crates/but-cherry-apply/: Cargo.toml
crates/but-cherry-apply/src/: lib.rs
crates/but-claude/: Cargo.toml
crates/but-claude/src/: broadcaster.rs  claude_settings.rs  db.rs  legacy.rs  lib.rs  pending_requests.rs  session.rs
crates/but-ctx/: Cargo.toml
crates/but-db/: Cargo.toml  build.rs
crates/but-db/src/: lib.rs  (+3 more)
crates/but-forge-storage/: Cargo.toml
crates/but-gerrit/: Cargo.toml
crates/but-github/: Cargo.toml
crates/but-gitlab/: Cargo.toml
crates/but-graph/: Cargo.toml
crates/but-installer/: Cargo.toml  README.md
crates/but-meta/: Cargo.toml
crates/but-napi/: .napi-rs.json  Cargo.toml  README.md
crates/but-oplog/: Cargo.toml
crates/but-oplog/src/: lib.rs
crates/but-rebase/: Cargo.toml
crates/but-rules/: Cargo.toml
crates/but-server/: Cargo.toml
crates/but-server/src/: lib.rs  projects.rs
crates/but-testing/: Cargo.toml
crates/but-testing/src/: args.rs  main.rs
crates/but-testing/src/command/: commit.rs  mod.rs  project.rs
crates/but-testsupport/: Cargo.toml
crates/but-tools/: Cargo.toml
crates/but-tools/src/: emit.rs  workspace.rs
crates/but-ts/: README.md
crates/but-workspace/: Cargo.toml
crates/but-worktrees/: Cargo.toml
crates/fluxgit-branch/: Cargo.toml
crates/fluxgit-branch-actions/: Cargo.toml
crates/fluxgit-branch-actions/src/: actions.rs  base.rs  branch.rs  branch_upstream_integration.rs  hooks.rs  integration.rs  lib.rs  move_branch.rs  move_commits.rs  remote.rs  reorder.rs  squash.rs  stack.rs  undo_commit.rs  upstream_integration.rs  virtual.rs
crates/fluxgit-branch-actions/src/branch_manager/: branch_creation.rs  branch_removal.rs
crates/fluxgit-branch-actions/tests/: hooks.rs  reorder.rs  squash.rs
crates/fluxgit-branch-actions/tests/fixtures/: branch-benches.sh  branch-details-benches.sh  dependencies.sh  for-details.sh  for-listing.sh  for-workspace-migration.sh  reorder.sh  squash.sh
crates/fluxgit-branch-actions/tests/virtual_branches/: amend.rs  apply_virtual_branch.rs  create_virtual_branch_from_branch.rs  init.rs  list.rs  list_details.rs  mod.rs  move_commit_to_vbranch.rs  oplog.rs  save_and_unapply_virtual_branch.rs  set_base_branch.rs  unapply_without_saving_virtual_branch.rs  undo_commit.rs  update_commit_message.rs  workspace_migration.rs
crates/fluxgit-branch/src/: branch.rs  lib.rs  reference_ext.rs
crates/fluxgit-cherry-pick/: Cargo.toml
crates/fluxgit-cli/: Cargo.toml
crates/fluxgit-cli/src/: args.rs  main.rs
crates/fluxgit-cli/src/command/: project.rs  vbranch.rs
crates/fluxgit-commit/: Cargo.toml
crates/fluxgit-edit-mode/: Cargo.toml
crates/fluxgit-edit-mode/src/: commands.rs  lib.rs
crates/fluxgit-edit-mode/tests/: edit_mode.rs
crates/fluxgit-edit-mode/tests/fixtures/: edit_mode.sh
crates/fluxgit-filemonitor/: Cargo.toml
crates/fluxgit-filemonitor/src/: events.rs  file_monitor.rs
crates/fluxgit-filemonitor/tests/filemonitor/: main.rs
crates/fluxgit-git/: Cargo.toml
crates/fluxgit-operating-modes/: Cargo.toml
crates/fluxgit-oplog/: Cargo.toml
crates/fluxgit-project/: Cargo.toml
crates/fluxgit-reference/: Cargo.toml
crates/fluxgit-repo/: Cargo.toml
crates/fluxgit-repo-actions/: Cargo.toml
crates/fluxgit-repo-actions/src/: askpass.rs  repository.rs
crates/fluxgit-repo/src/: commands.rs  config.rs  credentials.rs  hooks.rs  lib.rs  managed_hooks.rs  rebase.rs  repository_ext.rs
crates/fluxgit-repo/tests/: create_wd_tree.rs  credentials.rs  hooks.rs  managed_hooks_tests.rs  merge_base_octopussy.rs  mod.rs  read_file_from_workspace_security.rs  rebase.rs
crates/fluxgit-stack/: Cargo.toml
crates/fluxgit-stack/src/: stack.rs  stack_branch.rs  state.rs  target.rs
crates/fluxgit-stack/tests/: mod.rs
crates/fluxgit-stack/tests/fixtures/: stacking.sh
crates/fluxgit-tauri/: Cargo.toml  build.rs  inject-git-binaries.sh  tauri-before-build-command.sh  tauri.conf.json  tauri.conf.nightly-local.json  tauri.conf.nightly.json  tauri.conf.release.json  tauri.conf.test.json
crates/fluxgit-testsupport/: Cargo.toml
crates/fluxgit-testsupport/src/: lib.rs  secrets.rs  suite.rs  test_project.rs  testing_repository.rs
crates/fluxgit-url/: Cargo.toml
crates/fluxgit-user/: Cargo.toml
crates/fluxgit-watcher/: Cargo.toml
crates/fluxgit-workspace/: Cargo.toml
crates/fluxgit-workspace/src/: branch_trees.rs  lib.rs
e2e/: README.md  package.json
e2e/blackbox/: wdio.blackbox.conf.ts
e2e/playwright/: playwright.config.ts
etc/plans/: consistent-data.md
scripts/: clean.sh  install.sh  release.sh
(+903 files in other folders)
