[package]
name = "but-server"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
license-file = "../../LICENSE.md"
description = "A FluxGit CLI tool"
authors.workspace = true
readme = "../../README.md"
publish = false
rust-version.workspace = true

[[bin]]
name = "but-server"
path = "src/main.rs"
doctest = false

[features]

[dependencies]
but-api = { workspace = true, features = ["path-bytes", "legacy"] }
but-claude.workspace = true
but-db.workspace = true
but-path.workspace = true
but-settings.workspace = true
but-feedback.workspace = true
but-secret.workspace = true
but-ctx.workspace = true

fluxgit-project.workspace = true
fluxgit-watcher.workspace = true

serde.workspace = true
axum = { version = "0.8.9", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tower-http = { version = "0.6.8", features = ["cors"] }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-forest.workspace = true
[lints]
workspace = true
