[package]
name = "but-testing"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # Only used behind the optional `testing` feature for deterministic test commits.
    "fluxgit-commit",
]

[[bin]]
name = "but-testing"
path = "src/main.rs"
doctest = false

[features]
# To help produce stable commits in test-cases.
testing = ["dep:fluxgit-commit"]

[dependencies]
but-settings.workspace = true
but-core.workspace = true
but-db = { workspace = true, features = ["poll"] }
but-workspace = {workspace = true, features = ["legacy"]}
but-graph.workspace = true
but-hunk-dependency.workspace = true
but-hunk-assignment.workspace = true
but-meta = { workspace = true, features = ["legacy"] }
but-ctx = { workspace = true, features = ["legacy"] }

fluxgit-stack.workspace = true
fluxgit-project.workspace = true
fluxgit-filemonitor.workspace = true
fluxgit-branch-actions.workspace = true
fluxgit-branch.workspace = true
fluxgit-operating-modes.workspace = true
fluxgit-reference.workspace = true
fluxgit-commit = { workspace = true, optional = true, features = ["testing"] }

clap = { workspace = true, features = ["env"] }
gix.workspace = true
anyhow.workspace = true
itertools.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
dirs-next = "2.0.0"
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
