[package]
name = "but-tools"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
but-core.workspace = true
but-workspace = { workspace = true, features = ["legacy"] }
but-serde.workspace = true
but-hunk-dependency.workspace = true
but-hunk-assignment.workspace = true
but-oxidize.workspace = true
but-ctx.workspace = true

fluxgit-oplog.workspace = true
fluxgit-branch-actions.workspace = true
fluxgit-branch.workspace = true
fluxgit-project.workspace = true
fluxgit-stack.workspace = true
fluxgit-reference.workspace = true

async-openai.workspace = true
serde_json.workspace = true
anyhow.workspace = true
schemars.workspace = true
serde.workspace = true
serde-error = "0.1.3"
bstr.workspace = true
gix.workspace = true

[lints]
workspace = true
