[package]
name = "fluxgit-branch-actions"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
but-error.workspace = true
but-serde = { workspace = true, features = ["legacy"] }
but-meta = { workspace = true, features = ["legacy"] }
but-settings.workspace = true
but-gerrit.workspace = true
but-workspace = { workspace = true, features = ["legacy"] }
but-rebase.workspace = true
but-core = { workspace = true, features = ["legacy"] }
but-graph.workspace = true
but-oxidize.workspace = true
but-forge.workspace = true
but-ctx = { workspace = true, features = ["legacy"] }
chrono.workspace = true

fluxgit-oplog.workspace = true
fluxgit-repo.workspace = true
fluxgit-repo-actions.workspace = true
fluxgit-branch.workspace = true
fluxgit-reference.workspace = true
fluxgit-commit.workspace = true
fluxgit-url.workspace = true
fluxgit-operating-modes.workspace = true
fluxgit-cherry-pick.workspace = true
fluxgit-stack.workspace = true
fluxgit-workspace.workspace = true
fluxgit-project.workspace = true

tracing.workspace = true
anyhow.workspace = true
git2.workspace = true
git2-hooks.workspace = true
gix = { workspace = true, features = ["blob-diff", "revision", "merge"] }
uuid = { workspace = true }
serde.workspace = true
bstr.workspace = true
url = { version = "2.5.4", features = ["serde"] }
md5.workspace = true
itertools.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
but-graph.workspace = true
fluxgit-testsupport.workspace = true
fluxgit-workspace.workspace = true
gix = { workspace = true, features = [] }
glob = "0.3.3"
tempfile.workspace = true
but-hunk-assignment.workspace = true

[lints]
workspace = true
