[package]
name = "fluxgit-cli"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # Only used behind the optional `testing` feature for deterministic test commits.
    "fluxgit-commit",
]

[[bin]]
name = "fluxgit-cli"
path = "src/main.rs"
doctest = false

[features]
# To help produce stable commits in test-cases.
testing = ["dep:fluxgit-commit"]

[dependencies]
but-workspace.workspace = true
but-core.workspace = true
but-ctx = { workspace = true, features = ["legacy"] }

fluxgit-project.workspace = true
fluxgit-reference.workspace = true
fluxgit-branch-actions.workspace = true
fluxgit-branch.workspace = true
fluxgit-stack.workspace = true

gix = { workspace = true, features = ["max-performance"] }
dirs-next = "2.0.0"
clap = { workspace = true, features = ["env"] }
anyhow.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

fluxgit-commit = { workspace = true, optional = true, features = ["testing"] }

[lints]
workspace = true
