[package]
name = "fluxgit-filemonitor"
version = "0.0.0"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
gix = { workspace = true, features = ["excludes"] }

backoff.workspace = true
notify.workspace = true
fluxgit-notify-debouncer.path = "vendor/debouncer"
fluxgit-project.workspace = true

[lints]
workspace = true

[dev-dependencies]
but-testsupport.workspace = true
insta = "1.47.2"
