[package]
name = "fluxgit-repo-actions"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
but-error.workspace = true
but-core.workspace = true
but-oxidize.workspace = true
but-ctx.workspace = true

fluxgit-stack.workspace = true
fluxgit-git.workspace = true
fluxgit-project.workspace = true
fluxgit-reference.workspace = true
fluxgit-repo.workspace = true

git2.workspace = true
serde.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "sync",
] }
log = "^0.4"
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
