[package]
name = "fluxgit-repo"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
autotests = false

[lib]
doctest = false

[dependencies]
but-error.workspace = true
but-rebase.workspace = true
but-core = { workspace = true, features = ["legacy"] }
but-status.workspace = true
but-gerrit.workspace = true
but-oxidize.workspace = true
but-ctx = { workspace = true, features = ["legacy"] }

fluxgit-project.workspace = true
fluxgit-reference.workspace = true
fluxgit-url.workspace = true
fluxgit-cherry-pick.workspace = true

git2.workspace = true
git2-hooks.workspace = true
gix = { workspace = true, features = ["merge", "status", "tree-editor"] }
anyhow.workspace = true
bstr.workspace = true
tracing.workspace = true
tempfile.workspace = true
serde.workspace = true
thiserror.workspace = true
resolve-path = "0.1.0"
itertools.workspace = true
toml.workspace = true
base64 = "0.22.1"
infer = "0.19.0"
scopeguard = "1.2.0"
fuzzy-matcher = "0.3.7"
ignore = "0.4.25"

[[test]]
name = "repo"
path = "tests/mod.rs"

[dev-dependencies]
fluxgit-testsupport.workspace = true
fluxgit-user.workspace = true
but-settings.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision"] }
insta.workspace = true

[lints]
workspace = true
