[package]
name = "fluxgit-stack"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
autotests = false

[lib]
doctest = false

[dependencies]
but-core.workspace = true
but-rebase.workspace = true
but-meta.workspace = true
but-error.workspace = true
but-oxidize.workspace = true
but-ctx.workspace = true

fluxgit-repo.workspace = true
fluxgit-reference.workspace = true

git2.workspace = true
gix = { workspace = true, features = [] }
itertools.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
bstr.workspace = true

[[test]]
name = "stack"
path = "tests/mod.rs"

[dev-dependencies]
fluxgit-testsupport.workspace = true
fluxgit-repo-actions.workspace = true
tempfile.workspace = true
but-db.workspace = true
filetime = "0.2"

[lints]
workspace = true
