[package]
name = "fluxgit-testsupport"
version = "0.0.0"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
path = "src/lib.rs"
doctest = false
test = false

[dependencies]
but-core = { workspace = true, features = ["legacy"] }
but-settings.workspace = true
but-oxidize.workspace = true
but-workspace.workspace = true
but-fs = {workspace = true, features = ["legacy"]}
but-ctx.workspace = true

fluxgit-branch-actions = { path = "../fluxgit-branch-actions" }
fluxgit-repo = { path = "../fluxgit-repo" }
fluxgit-project.workspace = true
fluxgit-user.workspace = true
fluxgit-reference.workspace = true
fluxgit-url.workspace = true
fluxgit-stack.workspace = true

anyhow.workspace = true
once_cell = "1.20"
git2.workspace = true
tempfile.workspace = true
keyring.workspace = true
serde_json.workspace = true
gix-testtools.workspace = true
gix.workspace = true
parking_lot.workspace = true
termtree = "0.5.1"
uuid.workspace = true

[lints]
workspace = true
